k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-gin
  labels:
    name: hello-gin
    environment: production
